--- a/digital clock/index.html
+++ b/digital clock/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
 
-    <h1>digital clock</h1>
-    <div class="container">
-        <h1 id="hours">0  </h1>
-        <h1>:</h1>
-        <h1 id="minitues">0  </h1>
-         <h1>:</h1>
-        <h1 id="seconds">0 </h1>
-         <h1>:</h1>
-        <h1 id="am">AM</h1>
-    </div>
-    
+    <section>
+        <h1>Digital clock</h1>
+        <div class="container">
+            <h1 id="hours">0 </h1>
+            <h1>:</h1>
+            <h1 id="minitues">0 </h1>
+            <h1>:</h1>
+            <h1 id="seconds">0 </h1>
+            <h1>:</h1>
+            <h1 id="am">AM</h1>
+        </div>
+    </section>
+
+
     <script src="script/script.js"></script>
 </body>
+
 </html>
